# phonex

./: .gitignore  Cargo.toml  README.md  makecert.sh
client/: Cargo.toml
client/src/: data_channel.rs  err.rs  handshake.rs  main.rs  track.rs  websocket.rs  wrc.rs
errors/: Cargo.toml
errors/src/: lib.rs
phonex/: Cargo.toml
phonex/src/: data_channel.rs  err.rs  main.rs  message.rs  wrc.rs
server/: Cargo.toml
server/src/: err.rs  handshake.rs  main.rs  message.rs  websocket.rs  wrc.rs
signal/: Cargo.toml
signal/src/: channel.rs  err.rs  lib.rs  main.rs  match.rs  match_server.rs  message.rs
src/: handshake.rs  main.rs
