[workspace]
members = ["server", "client", "signal", "phonex", "errors"]
resolver = "2"

[workspace.dependencies]
serde = "1.0.217"
serde_json = "1.0.134"
webrtc = "0.12.0"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = "0.3.18"
tracing_spanned = { git = "https://github.com/comnipl/tracing_spanned", rev = "6fed6097d13d117e4d35120f56450b156c33b77e" }
