[package]
name = "errors"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
webrtc = { workspace = true }
thiserror = "1.0.65"
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }
tracing_spanned = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
