[package]
name = "phonex"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
futures = "0.3.31"
futures-util = "0.3.31"
serde = "1.0.217"
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = "0.26.1"
webrtc = { workspace = true }
signal = { path = "../signal" }
thiserror = "1.0.65"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = "0.3.18"
tracing_spanned = { workspace = true }
