[package]
name = "phonex"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
futures = "0.3.31"
futures-util = "0.3.31"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = "0.26.1"
webrtc = { workspace = true }
signal = { path = "../signal" }
thiserror = "1.0.65"
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }
tracing_spanned = { workspace = true }
