[package]
name = "signal"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
tokio = { version = "1.42.0", features = ["full"] }
webrtc = { workspace = true }
clap = { version = "4.5.20", features = ["derive", "env"] }
dotenvy = "0.15.7"
serde = "1.0.215"
serde_json = "1.0.133"
thiserror = "1.0.65"
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }
tracing_spanned = { git = "https://github.com/comnipl/tracing_spanned", rev = "6fed6097d13d117e4d35120f56450b156c33b77e" }
axum = { version = "0.7.9", features = ["ws"] }
futures = "0.3.31"
futures-util = { version = "0.3.31", default-features = false, features = [
  "sink",
  "std",
] }
errors = { path = "../errors" }
